--- a/mzalendo/core/static/sass/_header.scss
+++ b/mzalendo/core/static/sass/_header.scss
@@ -188,35 +188,34 @@ menu#site-user-tools {
 
 // ------------------------------------------------------
 
-@media only screen and (min-width: 640px) {
-  #login-box {
-    z-index: 1;
-    position: absolute;
-    right: 25px;
-    top: 26px;
-    display: none;
-    background: $colour7;
-    border-left: 1px solid #666666;
-    border-right: 1px solid #666666;
-    border-bottom: 1px solid #666666;
-    width: 175px;
-    padding: 10px;
-    @include box-shadow(rgba(0, 0, 0, 0.3) 0 5px 4px);
-    #login {
-      padding: 0;
-      margin: 0;
+#login-box {
+  z-index: 1;
+  position: absolute;
+  right: 25px;
+  top: 26px;
+  display: none;
+  background: $colour7;
+  border-left: 1px solid #666666;
+  border-right: 1px solid #666666;
+  border-bottom: 1px solid #666666;
+  width: 175px;
+  padding: 10px;
+  @include box-shadow(rgba(0, 0, 0, 0.3) 0 5px 4px);
+  #login {
+    padding: 0;
+    margin: 0;
+    width: auto;
+    form {
       width: auto;
-      form {
-        width: auto;
-        input#id_username,
-        input#id_password {
-          width: 163px;
-          margin: 0 0 10px 0; }
-        input.login-button {
-          margin: 0; }
-        p.forgot-register {
-          margin: 0;
-          font-size: 11px; } }
-      .login-social {
+      input#id_username,
+      input#id_password {
+        width: 163px;
+        margin: 0 0 10px 0; }
+      input.login-button {
+        margin: 0; }
+      p.forgot-register {
         margin: 0;
-        font-size: 12px; } } } }
+        font-size: 11px; } }
+    .login-social {
+      margin: 0;
+      font-size: 12px; } } }
